updated workflow-chart to auto-generate name

--- a/scripts/devtron-reference-helm-charts/workflow-chart_1-0-0/templates/workflow.yaml
+++ b/scripts/devtron-reference-helm-charts/workflow-chart_1-0-0/templates/workflow.yaml
@@ -27,7 +27,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
-  name: {{ include ".Chart.Name .fullname" $ }}
+  name: {{ include ".Chart.Name .fullname" $ }}-{{ randAlphaNum 5 | lower }}
   labels:
     app: {{ template ".Chart.Name .name" $ }}
     chart: {{ template ".Chart.Name .chart" $ }}
