--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/service.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/service.yaml
@@ -14,6 +14,10 @@ metadata:
 {{- end}}
 spec:
   type: {{ .Values.service.type | default "ClusterIP" }}
+{{- if (and (eq .Values.service.type "LoadBalancer") .Values.service.loadBalancerSourceRanges )}}
+  loadBalancerSourceRanges: 
+{{ toYaml .Values.service.loadBalancerSourceRanges | indent 4 }}
+{{- end }}
   ports:
     {{- range .Values.ContainerPort }}
       {{- if .servicePort }}
