--- a/scripts/devtron-reference-helm-charts/reference-chart_4-11-0/templates/deployment.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-11-0/templates/deployment.yaml
@@ -329,8 +329,14 @@ spec:
           {{- if eq .subPath false }}
             - name: {{ $cmName | replace "." "-"}}-vol
               mountPath: {{ $cmMountPath }}
+
           {{- else if and (eq (.subPath) true) (eq (.external) true) }}
           {{- range .secretData }}
+            - name: {{ $cmName | replace "." "-"}}-vol
+              mountPath: {{ $cmMountPath}}/{{ .name }}
+              subPath: {{ .name }}
+	      
+          {{- else if and (eq (.subPath) true) (eq (.externalType) "KubernetesSecret") }}
             - name: {{ $cmName | replace "." "-"}}-vol
               mountPath: {{ $cmMountPath}}/{{ .name }}
               subPath: {{ .name }}
@@ -340,6 +346,7 @@ spec:
             - name: {{ $cmName | replace "." "-"}}-vol
               mountPath: {{ $cmMountPath}}/{{ $k}}
               subPath: {{ $k}}
+          {{- end }}
           {{- end }}
           {{- end }}
           {{- end }}
