--- a/scripts/devtron-reference-helm-charts/reference-chart_4-11-0/templates/service.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-11-0/templates/service.yaml
@@ -16,7 +16,9 @@ spec:
   type: {{ .Values.service.type | default "ClusterIP" }}
 {{- if (and (eq .Values.service.type "LoadBalancer") .Values.service.loadBalancerSourceRanges )}}
   loadBalancerSourceRanges: 
-{{ toYaml .Values.service.loadBalancerSourceRanges | indent 4 }}
+{{- range .Values.service.loadBalancerSourceRanges }}
+ - {{ . }}
+  {{- end }}
 {{- end }}
   ports:
     {{- range .Values.ContainerPort }}
