updated values in release and values.yaml

--- a/scripts/devtron-reference-helm-charts/reference-chart_4-11-0/release-values.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-11-0/release-values.yaml
@@ -5,6 +5,7 @@ server:
    enabled: false
 dbMigrationConfig:
   enabled: false
+  jobs: []
 
 pauseForSecondsBeforeSwitchActive: 0
 waitForSecondsBeforeScalingDown: 0
