--- a/scripts/devtron-reference-helm-charts/reference-chart_4-11-0/templates/deployment.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-11-0/templates/deployment.yaml
@@ -331,9 +331,11 @@ spec:
               mountPath: {{ $cmMountPath }}
 
           {{- else if and (eq (.subPath) true) (eq (.externalType) "KubernetesSecret") }}
+	  {{- range $k, $v := .data }}
             - name: {{ $cmName | replace "." "-"}}-vol
-              mountPath: {{ $cmMountPath}}/{{ .name }}
-              subPath: {{ .name }}
+              mountPath: {{ $cmMountPath}}/{{ $k}}
+              subPath: {{ $k}}
+          {{- end }}
 
           {{- else if and (eq (.subPath) true) (eq (.external) true) }}
           {{- range .secretData }}
