api spec updated

--- a/specs/external-app/applist.yaml
+++ b/specs/external-app/applist.yaml
@@ -20,7 +20,7 @@ paths:
             text/event-stream:
               schema:
                 $ref: "#/components/schemas/AppList"
-  /orchestrator/application/deployment-history:
+  /orchestrator/application/deployment-history/deprecated:
     get:
       description: deployment history of helm app
       parameters:
@@ -32,6 +32,14 @@ paths:
           allowEmptyValue: false
           schema:
             type: string
+        - in: query
+          name: installedAppId
+          example: "100"
+          description: devtron charts installed instance id
+          required: false
+          allowEmptyValue: false
+          schema:
+            type: number
       responses:
         "200":
           description: deployment history
@@ -332,7 +340,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/UpdateReleaseResponse"
-  /orchestrator/application/deployment-detail:
+  /orchestrator/application/deployment-detail/deprecated:
     get:
       description: deployment details of helm app
       parameters:
@@ -360,16 +368,24 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/HelmAppDeploymentManifestDetail"
-  /orchestrator/app-store/installed-app/deployment-history:
+  /orchestrator/application/deployment-history:
     get:
       description: deployment history of helm app
       parameters:
         - in: query
+          name: appId
+          example: "12|helm-app|cluster1-ns1"
+          description: project ids
+          required: true
+          allowEmptyValue: true
+          schema:
+            type: string
+        - in: query
           name: installedAppId
           example: "100"
           description: devtron charts installed instance id
-          required: true
-          allowEmptyValue: false
+          required: false
+          allowEmptyValue: true
           schema:
             type: number
       responses:
@@ -379,16 +395,24 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/DeploymentHistoryAndInstalledAppInfo"
-  /orchestrator/app-store/installed-app/deployment-history/info:
+  /orchestrator/application/deployment-history/info:
     get:
       description: deployment history detail info, values
       parameters:
         - in: query
+          name: appId
+          example: "12|helm-app|cluster1-ns1"
+          description: project ids
+          required: true
+          allowEmptyValue: true
+          schema:
+            type: string
+        - in: query
           name: installedAppId
           example: "100"
           description: devtron charts installed instance id
-          required: true
-          allowEmptyValue: false
+          required: false
+          allowEmptyValue: true
           schema:
             type: string
         - in: query
